Use fixed positioning instead of grid overlapping

--- a/style.css
+++ b/style.css
@@ -82,10 +82,12 @@ body * {
 }
 
 .form-container.visible {
-    grid-row: 1 / 2;
-    grid-column: 1 / 2;
+    width: 100%;
+    height: 100%;
 
-    z-index: 2;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 
 .icon {
